--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -31,7 +31,7 @@
    // テクスチャー読み込み
    var textureLoader = new THREE.TextureLoader();  
   var texture = textureLoader.load("石垣.jpg");
-  var mat = new THREE.MeshMaterial();
+  var mat = new THREE.MeshStandardMaterial();
   mat.map = texture;
   
   // バンプマップ読み込み
