--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -48,7 +48,7 @@
   scene.add(box);
 
  // 平行光源1
-    var directionalLight1 = new THREE.DirectionalLight(0x0000ff);
+    var directionalLight1 = new THREE.DirectionalLight(0x0f0000);
     directionalLight1.position.set(1, 1, 1);
     // シーンに追加
     scene.add(directionalLight1);
