--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -53,7 +53,7 @@
     // シーンに追加
     scene.add(directionalLight1);
     // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
+        var directionalLight2 = new THREE.DirectionalLight(0xff0000);
     directionalLight2.position.set(-1, 1, 1);
     // シーンに追加
     scene.add(directionalLight2);
