--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>sample_bump</title>
+    <meta charset="utf-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script>
+      // ページの読み込みを待つ
+      window.addEventListener('load', init);
 
-  <!-- three.jsを読み込む(ローカル) -->
-  <!-- <script src="./three.js"></script> -->
-  <!-- three.jsを読み込む(CDN) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/99/three.min.js"></script>
+      function init() {
+        // サイズを指定
+        const width = 960;
+        const height = 540;
 
-</head>
-<body>
- <script>
-  var init = function() {
+        // レンダラーを作成
+        const renderer = new THREE.WebGLRenderer({
+          canvas: document.querySelector('#myCanvas')
+        });
+        renderer.setSize(width, height);
+        // 背景の色を設定
+        renderer.setClearColor(0xeeeeff);
 
-    var width = 800,
-        height = 600;
+        // シーンを作成
+        const scene = new THREE.Scene();
+
+        // カメラを作成
+        const camera = new THREE.PerspectiveCamera(45, width / height);
+        // カメラの初期座標を設定
+        camera.position.set(0, 0, 1000);
+
+        // カメラコントローラーを作成
+        const controls = new THREE.OrbitControls(camera,document.body);
   
-    // レンダラーを作成
-    var renderer = new THREE.WebGLRenderer();
-    renderer.setSize(width, height);
-    document.body.appendChild(renderer.domElement);
-  
-    // シーンを作成
-    var scene = new THREE.Scene();
-  
-    // カメラを作成
-  var camera = new THREE.PerspectiveCamera(45, width / height, 1, 1000);
+        // 平行光源1
+        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
+        directionalLight1.position.set(100, 100, 100);
+        // シーンに追加
+        scene.add(directionalLight1);
+        // 平行光源2
+        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
+        directionalLight2.position.set(-100, 100, 100);
+        // シーンに追加
+        scene.add(directionalLight2);
 
-   // テクスチャー読み込み
-   var textureLoader = new THREE.TextureLoader();  
-  var texture = textureLoader.load("石垣.jpg");
-  var mat = new THREE.MeshStandardMaterial();
-  mat.map = texture;
-  
-  // バンプマップ読み込み
-  var bump = textureLoader.load("石垣-bump.jpg");
-  mat.bumpMap = bump;
-  mat.bumpscale = 1.0;
+        // helper
+      const gridHelper = new THREE.GridHelper(200,50); // size, step
+      scene.add(gridHelper);
 
-  // 箱を作成
-  var geometry = new THREE.BoxGeometry(1, 1, 1);
-  //var material = new THREE.MeshPhongMaterial({ color: 0xffffff });
-  //var box = new THREE.Mesh(geometry, material);
-  var box = new THREE.Mesh(geometry, mat);
-  box.position.z = -5;
-  scene.add(box);
+      const axisHelper = new THREE.AxisHelper(200,50);
+      scene.add(axisHelper);
 
- // 平行光源1
-    var directionalLight1 = new THREE.DirectionalLight(0xff0000);
-    directionalLight1.position.set(1, 1, 1);
-    // シーンに追加
-    scene.add(directionalLight1);
-    // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xff0000);
-    directionalLight2.position.set(-1, 1, 1);
-    // シーンに追加
-    scene.add(directionalLight2);
+        // 木0をスプライトで作成
+        var textureLoader = new THREE.TextureLoader();  
+        var texture0 = textureLoader.load("img/tree0.png");
+        const material0 = new THREE.SpriteMaterial({ map: texture0,});
 
-  // 初回実行
-  var update = function() {
-    requestAnimationFrame(update);
+        const sprite0 = new THREE.Sprite(material0);
+        sprite0.position.x = 0;
+        sprite0.position.y = 50;
+        sprite0.position.z = 0;
+        sprite0.scale.set(100,100,100);
+        scene.add(sprite0);
 
-    // 箱を回転させる
-    box.rotation.x += 0.01;
-    box.rotation.y += 0.01;
+        // 木1をスプライトで作成 
+        var texture1 = textureLoader.load("img/tree1.png");
+        const material1 = new THREE.SpriteMaterial({ map: texture1,});
 
-    renderer.render(scene, camera);
-  };
-  update();
-}
-  window.addEventListener('DOMContentLoaded', init);
-</script>
-</body>
+        const sprite1 = new THREE.Sprite(material1);
+        sprite1.position.x = 100;
+        sprite1.position.y = 50;
+        sprite1.position.z = -100;
+        sprite1.scale.set(100,100,100);
+        scene.add(sprite1);
+
+        // 木1をスプライトで作成 
+        var texture2 = textureLoader.load("img/tree2.png");
+        const material2 = new THREE.SpriteMaterial({ map: texture2,});
+
+        const sprite2 = new THREE.Sprite(material2);
+        sprite2.position.x = -100;
+        sprite2.position.y = 50;
+        sprite2.position.z = -100;
+        sprite2.scale.set(100,100,100);
+        scene.add(sprite2);
+
+        tick();
+        // 毎フレーム時に実行されるループイベントです
+        function tick() {
+          // レンダリング
+          renderer.render(scene, camera);
+          requestAnimationFrame(tick);
+        }
+      }
+    </script>
+  </head>
+
+  <body>
+    <canvas id="myCanvas"></canvas>
+  </body>
 </html>
