--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -52,8 +52,8 @@
     
         // 平面を作成
         var planeGeometry = new THREE.PlaneGeometry(5,5,5,5);
-        var planeMaterial = new THREE.MeshBasicMaterial({color: 0x00ff00});
-        var plane = new THREE.Mesh(planeGeometry,planeMaterial);
+        var textureLoader = new THREE.TextureLoader;
+        var texture = textureLoader.load("");
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,-1,0);
 
