--- a/sample7-bump.html
+++ b/sample7-bump.html
@@ -53,11 +53,17 @@
         // 平面を作成
         var planeGeometry = new THREE.PlaneGeometry(5,5,5,5);
         var textureLoader = new THREE.TextureLoader;
-        var texture = textureLoader.load("");
+        var texture = textureLoader.load("IMG_3646.JPG");
+        var mat = new THREE.PlaneGeometry();
         plane.rotation.set( -Math.PI/2, 0, 0 );
         plane.position.set(0,-1,0);
+          
+        //バンプマップ読み込み
+        var bump = textureLoades.load("石畳bump.JPG");
+        mat.bumpMap = bump;
+        mat.bumpscale = 0.2;
 
-        // 木0をスプライトで作成
+        // 日本人形をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
         var texture0 = textureLoader.load("img/tree0.png");
         const material0 = new THREE.SpriteMaterial({ map: texture0,});
@@ -69,28 +75,7 @@
         sprite0.scale.set(100,100,100);
         scene.add(sprite0);
 
-        // 木1をスプライトで作成 
-        var texture1 = textureLoader.load("img/tree1.png");
-        const material1 = new THREE.SpriteMaterial({ map: texture1,});
-
-        const sprite1 = new THREE.Sprite(material1);
-        sprite1.position.x = 100;
-        sprite1.position.y = 50;
-        sprite1.position.z = -100;
-        sprite1.scale.set(100,100,100);
-        scene.add(sprite1);
-
-        // 木1をスプライトで作成 
-        var texture2 = textureLoader.load("img/tree2.png");
-        const material2 = new THREE.SpriteMaterial({ map: texture2,});
-
-        const sprite2 = new THREE.Sprite(material2);
-        sprite2.position.x = -100;
-        sprite2.position.y = 50;
-        sprite2.position.z = -100;
-        sprite2.scale.set(100,100,100);
-        scene.add(sprite2);
-
+        
         tick();
         // 毎フレーム時に実行されるループイベントです
         function tick() {
