--- a/demo.html
+++ b/demo.html
@@ -65,7 +65,7 @@
 
         // 日本人形をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
-        var texture0 = textureLoader.load("img/tree0.png");
+        var texture0 = textureLoader.load("日本人形1.png");
         const material0 = new THREE.SpriteMaterial({ map: texture0,});
 
         const sprite0 = new THREE.Sprite(material0);
