--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <h1>WebGL演習（３）</h1>
     <h2>テクスチャマッピング</h2>
     <p>
-        
-        顔のテクスチャ―：<a href="sample7-face.html">sample7-face.html</a><br>
-        ビルを作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
-        バンプマッピング例：<a href="demo.html">demo.html</a><br>
+        課題２：<a href="demo.html">demo.html</a><br>
         
     </p>
 </body>
