--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,14 @@
         renderer.setSize(width, height);
         // 背景の色を設定
         renderer.setClearColor(0xeeeeff);
-
+          
+        //日本人形の読み込み
+            var textureLoader = new THREE.TextureLoader();
+            var texture = textureLoader.looad("日本人形1.jpg");
+            var mat = new
+        THREE.MeshLambertMaterial({transparent:true});
+            mat.map = texture;
+        
         // シーンを作成
         const scene = new THREE.Scene();
 
@@ -63,10 +70,6 @@
         mat.bumpMap = bump;
         mat.bumpscale = 0.2;
 
-        // 日本人形をスプライトで作成
-        var textureLoader = new THREE.TextureLoader();  
-        var texture0 = textureLoader.load("日本人形1.png");
-        const material0 = new THREE.SpriteMaterial({ map: texture0,});
 
         const sprite0 = new THREE.Sprite(material0);
         sprite0.position.x = 0;
