--- a/demo.html
+++ b/demo.html
@@ -23,7 +23,7 @@
           
         //日本人形の読み込み
             var textureLoader = new THREE.TextureLoader();
-            var texture = textureLoader.looad("日本人形１.jpg");
+            var texture = textureLoader.load("日本人形１.jpg");
             var mat = new
         THREE.MeshLambertMaterial({transparent:true});
             mat.map = texture;
