--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>WebGL(3)</title>
+    <title>modeling2</title>
 </head>
 <body>
     <h1>WebGL演習（３）</h1>
